k8s_dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:  
  ingressClassName: traefik
  rules:
    - host: dashboard-dev.homelab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-kong-proxy
                port:
                  number: 443
